--- a/packages/SystemUI/res/values/afterlife_dimens.xml
+++ b/packages/SystemUI/res/values/afterlife_dimens.xml
@@ -149,4 +149,11 @@
 
     <!-- FPS Info tile -->
     <dimen name="fps_info_text_padding">4dp</dimen>
+    
+    <!-- QS Custom Header -->
+    <dimen name="qs_custom_header_corner_radius">18dp</dimen>
+    <dimen name="qs_header_hyper_padding_top">290dp</dimen>
+    
+    <!-- QS vertical slider -->
+    <dimen name="qs_controls_slider_corner_radius">18dp</dimen>
 </resources>
