--- a/packages/SystemUI/res/layout/afterlife_qs_hyper_header.xml
+++ b/packages/SystemUI/res/layout/afterlife_qs_hyper_header.xml
@@ -33,7 +33,7 @@
             android:id="@+id/qs_hyper_wifi_button"
             android:background="@drawable/qs_custom_header_bg_button"
             android:layout_width="0dp"
-            android:layout_height="@dimen/qs_tile_height"
+            android:layout_height="@dimen/qs_hyper_tile_height"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:layout_marginEnd="8dp"
@@ -52,24 +52,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:textColor="?android:textColorPrimary"
-                    android:ellipsize="marquee"
+                    android:textAppearance="@style/TextAppearance.QS.TileLabel"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:id="@+id/qs_hyper_wifi_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/quick_settings_wifi_label"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="1"
                     android:singleLine="true"
+                    android:focusable="false"
                     android:textDirection="locale"
                     android:textAlignment="viewStart"
                     android:layout_marginStart="16dp" />
                 <TextView
-                    android:textColor="?android:textColorPrimary"
-                    android:ellipsize="marquee"
+                    android:textAppearance="@style/TextAppearance.QS.TileLabel.Secondary"
+                    android:textColor="?android:attr/textColorSecondary"
                     android:id="@+id/qs_hyper_wifi_summary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Off"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="1"
                     android:singleLine="true"
+                    android:focusable="false"
                     android:textDirection="locale"
                     android:textAlignment="viewStart"
                     android:layout_marginStart="16dp" />
@@ -82,7 +88,7 @@
             android:id="@+id/qs_hyper_data_button"
             android:background="@drawable/qs_custom_header_bg_button"
             android:layout_width="0dp"
-            android:layout_height="@dimen/qs_tile_height"
+            android:layout_height="@dimen/qs_hyper_tile_height"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:layout_marginStart="8dp"
@@ -101,24 +107,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:textColor="?android:textColorPrimary"
-                    android:ellipsize="marquee"
+                    android:textAppearance="@style/TextAppearance.QS.TileLabel"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:id="@+id/qs_hyper_data_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/quick_settings_cellular_detail_title"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="1"
                     android:singleLine="true"
+                    android:focusable="false"
                     android:textDirection="locale"
+                    android:textAlignment="viewStart"
                     android:layout_marginStart="16dp" />
                 <TextView
-                    android:textColor="?android:textColorPrimary"
-                    android:ellipsize="marquee"
+                    android:textAppearance="@style/TextAppearance.QS.TileLabel.Secondary"
+                    android:textColor="?android:attr/textColorSecondary"
                     android:id="@+id/qs_hyper_data_summary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Off"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="1"
                     android:singleLine="true"
+                    android:focusable="false"
                     android:textDirection="locale"
+                    android:textAlignment="viewStart"
                     android:layout_marginStart="16dp" />
             </LinearLayout>
         </com.android.systemui.animation.view.LaunchableLinearLayout>
